--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.0.5",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "nodemon": "^3.1.9",
