--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^6.4.1",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@reduxjs/toolkit": "^2.5.1",
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
@@ -28,8 +29,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.3",
+    "shadcn-ui": "^0.9.4",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
